GraalVM tweak - bump mem a tad and force some output
This is not looking great. GraalVM native-image might need more RAM than
is available on circle free tier for my test runner.

Turn on GC dumps to force output to keep circleci from killing my job due
to no output.

Bump up memory a wee bit, hopefully still under circle ci's 4gb.